Fix spacing for shopfront page search box

--- a/app/assets/stylesheets/darkswarm/big-input.sass
+++ b/app/assets/stylesheets/darkswarm/big-input.sass
@@ -38,7 +38,7 @@
 @mixin big-input-static
   outline: 0
   &:active, &:focus, &.active
-    padding: 0rem 0.5rem 0.2rem 0.5rem
+    padding: 0.75rem 1rem 0.35rem 1rem
     letter-spacing: 0
 
 @mixin placeholder($placeholder, $placeholderhvr)
